syntax = "proto3";
package proto;
option go_package = "./proto";

service KV {
    rpc Put (PutRequest) returns (PutResponse) {}
    rpc Get (GetRequest) returns (GetResponse) {}
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

service Raft {
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message RequestVoteRequest {
    uint64 Term = 1;
    uint64 CandidateID = 2;
    uint64 LastLogIndex = 3;
    uint64 LastLogTerm = 4;
}

message RequestVoteResponse {
    uint64 Term = 1;
    bool VoteGranted =2;
}

message AppendEntriesRequest {
    uint64 Term = 1;
    uint64 LeaderID = 2;
    uint64 PrevLogIndex = 3;
    uint64 PrevLogTerm = 4;
}

message AppendEntriesResponse {
    uint64 Term = 1;
}